--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
+        "*.embeddedhtml": "html",
         "algorithm": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
@@ -73,7 +74,8 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "*.dat": "cpp"
     },
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter"
